[package]
name = "hackernews-cli"
version = "0.1.0"
authors = ["sgiroux <sgiroux@c3metrics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
