[package]
name = "hackernews-tui"
version = "0.1.0"
authors = ["sgiroux <sgiroux@c3metrics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
htmlescape = "0.3.1"
log = "0.4.6"
log4rs = "1.0"
rand = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
termion = "1.5"
textwrap = "0.13"
tokio = { version = "1", features = ["full"] }
tui = "0.14"
webbrowser = "0.5.5"
